css: fix overflowing text not increasing preview height

--- a/app.css
+++ b/app.css
@@ -292,7 +292,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #wizard .imagePreview .preview {
-  height: 11em;
+  min-height: 11em;
   margin: 0.5em;
   padding: 0.5em;
   border: 1px solid white;
